--- a/printer.cfg
+++ b/printer.cfg
@@ -42,7 +42,7 @@ second_homing_speed = 10
 
 [stepper_y]
 step_pin = PF6
-## "!" for stock and TMC2208 with reversed plugs
+## "" for stock and TMC2208 with reversed plugs
 #dir_pin = PF7
 dir_pin = !PF7
 enable_pin = !PF2
@@ -59,7 +59,7 @@ second_homing_speed = 10
 
 [stepper_z]
 step_pin = PL3
-## "!" for stock and TMC2208 with reversed plugs
+## "" for stock and TMC2208 with reversed plugs
 #dir_pin = PL1
 dir_pin = !PL1
 enable_pin = !PK0
@@ -80,7 +80,7 @@ second_homing_speed = 3
 
 [stepper_z1]
 step_pin = PC1
-## "" for stock and TMC2208 with reversed plugs
+## "!" for stock and TMC2208 with reversed plugs
 #dir_pin = PC3
 dir_pin = !PC3
 ## comment below for 3dtouch bed leveling and to disable Z limit switches
@@ -94,7 +94,7 @@ Microsteps = 16
 
 [extruder]
 step_pin = PA4
-## "!" for stock and TMC2208 with reversed plugs
+## "" for stock and TMC2208 with reversed plugs
 #dir_pin = PA6
 dir_pin = PA6
 enable_pin = PA2
@@ -159,8 +159,7 @@ square_corner_velocity = 5
 pin = PH4
 
 [bltouch]
-sensor_pin = ^PE4
-#sensor_pin = ^PB2
+sensor_pin = ^PD0
 control_pin = PB5
 # do your own measurement
 x_offset = 31.5
@@ -210,7 +209,7 @@ enable_force_move: True
 
 
 [virtual_sdcard]
-path: ~/gcode_files
+path: ~/printer_data/gcodes
 
 
 [output_pin BEEPER_pin]
