--- a/printer.cfg
+++ b/printer.cfg
@@ -1,72 +1,372 @@
-# 
-# Klipper configuration file for Anycubic i3 MEGA S
-#
-# This config file contains settings of all printer pins (steppers, sensors) for Anycubic i3 mega S with TMC2208 Drivers with stock plug orientation 
-# Klipper firmware should be compiled for the atmega2560
-#
-# Config file includes
-#  - Original or 2208(2209) rotated by cable drivers
-#  - Mesh bed leveling: BLtouch (3DTouch sensor from Triangelab)
-#  - Manual meshed bed leveling (commented out)
-#  - 'virtual_sdcard' for fast printing without gaps
-#  - Beeper through M300 gcode
-#  - Pause/Resume through M600 for filament change
-#  - START_PRINT/END_PRINT macros should be start and end g-code in slicer
-#  - Pressure Advance and Input Shaper configured
-#
-# 3DTouch code is commented out. Z limit switches are used to home Z axis.
-#
-# Video covering installation here: https://youtu.be/cAxEIdThDiQ
-#
-# The latest version of the config reference is also available online at:
-# https://www.klipper3d.org/Config_Reference.html
+# This file contains pin mappings for the Anycubic i3 Mega with
+# Ultrabase from 2017. (This config may work on an Anycubic i3 Mega v1
+# prior to the Ultrabase if you comment out the definition of the
+# endstop_pin in the stepper_z1 section.) To use this config, the
+# firmware should be compiled for the AVR atmega2560.
+
+# See docs/Config_Reference.md for a description of parameters.
+
+#[include base.cfg]
+#[include extruder.cfg]
+#[include bltouch.cfg]
+#[include macros.cfg]
+#[include start_end.cfg]
+[include mainsail.cfg]
+
 [exclude_object]
 
-##########################################
-#
-# Aufteilung in unterschiedliche Dateien
-#
-##########################################
-[include base.cfg]
-[include extruder.cfg]
-[include macros.cfg]
-[include bltouch.cfg]
-[include start_end.cfg]
+[stepper_x]
+step_pin: PF0
+dir_pin: PF1
+enable_pin: !PD7
+microsteps: 16
+rotation_distance: 40
+endstop_pin: ^!PE5
+position_min: -5
+position_endstop: -5
+position_max: 225                               ;Anpassung Druckbett auf Knuttwurst einstellungen
+homing_speed: 30.0
+
+[stepper_y]
+step_pin: PF6
+dir_pin: !PF7
+enable_pin: !PF2
+microsteps: 16
+rotation_distance: 40
+endstop_pin: ^!PL7
+position_endstop: 0
+position_max: 210
+homing_speed: 30.0
+
+[stepper_z]
+step_pin: PL3
+dir_pin: !PL1
+enable_pin: !PK0
+microsteps: 16
+rotation_distance: 8
+position_max: 210                               ;Anpassung Druckbett auf Knuttwurst einstellungen
+homing_speed: 5.0
+#Anpassung damit BL-Toch als Virtueller Endstop genutzt wurd
+#endstop_pin: probe:z_virtual_endstop
+endstop_pin: ^!PD3                             ;Wurde auskommentiert, da dies laut Doku (https://www.klipper3d.org/BLTouch.html#:~:text=If%20the%20BL%2DTouch%20will%20be%20used%20to%20home%20the%20Z%20axis%20then%20set%20endstop_pin%3A) nicht benötigt wird bei BLTouchhttps://www.klipper3d.org/BLTouch.html#:~:text=If%20the%20BL%2DTouch%20will%20be%20used%20to%20home%20the%20Z%20axis%20then%20set%20endstop_pin%3A
+position_endstop: 0.0                          ;Wurde auskommentiert, da dies laut Doku (https://www.klipper3d.org/BLTouch.html#:~:text=If%20the%20BL%2DTouch%20will%20be%20used%20to%20home%20the%20Z%20axis%20then%20set%20endstop_pin%3A) nicht benötigt wird bei BLTouchhttps://www.klipper3d.org/BLTouch.html#:~:text=If%20the%20BL%2DTouch%20will%20be%20used%20to%20home%20the%20Z%20axis%20then%20set%20endstop_pin%3A
+
+[stepper_z1]
+step_pin: PC1
+dir_pin: !PC3
+enable_pin: !PC7
+microsteps: 16
+rotation_distance: 8
+endstop_pin: ^!PL6
+
+[extruder]
+step_pin: PA4
+dir_pin: PA6
+enable_pin: !PA2
+microsteps: 16
+rotation_distance: 34.557
+nozzle_diameter: 0.400
+filament_diameter: 1.750
+heater_pin: PB4
+sensor_type: ATC Semitec 104GT-2
+sensor_pin: PK5
+#control: pid
+#pid_Kp: 15.717
+#pid_Ki: 0.569
+#pid_Kd: 108.451
+min_temp: 0
+max_temp: 260 ;245 Origianl Wert. Wurde auf 260 angepasst laut Anycubic Doku (https://drive.google.com/file/d/13hGH6_5x4iELyqkURTVaChUewx2xc3V2/view) Seite 5
+max_extrude_only_distance: 2
+
+[heater_fan extruder_fan]
+pin: PL5
+
+[heater_bed]
+heater_pin: PH5
+sensor_type: EPCOS 100K B57560G104F
+sensor_pin: PK6
+#control: pid
+#pid_Kp: 74.883
+#pid_Ki: 1.809
+#pid_Kd: 775.038
+min_temp: 0
+max_temp: 110
+
+[fan]
+pin: PH6
+
+[mcu]
+#serial: /dev/ttyUSB0
+serial: /dev/serial/by-id/usb-Silicon_Labs_CP2102_USB_to_UART_Bridge_Controller_0001-if00-port0
+
+[printer]
+kinematics: cartesian
+max_velocity: 300
+max_accel: 3000
+max_z_velocity: 10
+max_z_accel: 60
+
+[heater_fan stepstick_fan]
+pin: PH4
+
+[virtual_sdcard]
+path: ~/printer_data/gcodes
+
+[bltouch]
+sensor_pin = ^PD0 #PIN21 in Marlin
+control_pin = PB5 #PIN11 in Marlin
+samples: 2
+sample_retract_dist: 3.0
+probe_with_touch_mode = True
+stow_on_each_sample = False
+x_offset = 27
+y_offset = -14
+#z_offset = 0
+
+#Turn ON to adjust home location from 0,0,0
+[safe_z_home]
+home_xy_position = 112.5,105
+speed = 50
+z_hop = 10
+z_hop_speed = 5
+
+# bltouch mesh bed leveling
+[bed_mesh]
+speed = 100
+horizontal_move_z = 5
+mesh_min = 30,5 #23,28
+mesh_max = 200,190 #190,190
+probe_count = 9,9
+algorithm = bicubic
+
+[display_status]
+
+############################################################################
+##                                                                        ##
+##                               Macros                                   ##
+##                                                                        ##
+############################################################################
+[gcode_macro M300]
+# default_parameter_S: 1000
+# default_parameter_P: 100
+gcode:
+    {% set S = params.S|default(1000)|float %}
+    {% set P = params.P|default(100)|float %}
+    SET_PIN PIN=BEEPER_pin VALUE=1000
+    G4 P100
+    SET_PIN PIN=BEEPER_pin VALUE=0
+
+[gcode_macro M600]
+# default_parameter_X: 50
+# default_parameter_Y: 0
+# default_parameter_Z: 10
+gcode:
+    {% set X = params.X|default(50)|float %}
+    {% set Y = params.Y|default(0)|float %}
+    {% set Z = params.Z|default(10)|float %}
+    SAVE_GCODE_STATE NAME=M600_state
+    PAUSE
+    G91
+    G1 E-.8 F2700
+    G1 Z{Z}
+    G90
+    G1 X{X} Y{Y} F3000
+    G91
+    G1 E-150 F1000
+    M300 S299 P200
+    M300 S299 P200
+    M300 S299 P200
+    M300 S299 P200
+    M300 S299 P200
+    RESTORE_GCODE_STATE NAME=M600_state
+
+[gcode_macro Heat_Hotend_200]
+gcode:
+  SET_HEATER_TEMPERATURE HEATER=extruder TARGET=200
+
+[gcode_macro Heat_Hotend_230]
+gcode:
+  SET_HEATER_TEMPERATURE HEATER=extruder TARGET=230
+
+[gcode_macro Heat_Bed_60]
+gcode:
+  SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=60
+
+[gcode_macro Filemant_Remove]
+gcode:
+  G28 ; Alle Achsen Homen
+  M104 S230 ; Einstellen der Temperatur für das Hotend.
+
+  M300 S1000 P500 ; chirp to indicate bed mesh levels is initializing
+
+  ;G1 Z100 F2400 ; Bewegen des Hotend auf 100mm höhe.
+  ;G1 X105 F1200 ; Bewegen des Hotend auf Mitte von Bauvolumen.
+  ;G1 Y200 F1200 ; Druckbett um 200mm nach vorne bewegen.
+  
+  M109 S230 ; Warten bis Hotend Temperatur zum Filamentwechsel Erreicht hat.
+  
+  M300 S440 P200 ; Ton ausgeben wenn Temperatur erreicht
+  
+  G1 E-50 F7200 ; Filament 30mm schnell zurückziehen
+  G1 E-80 F80 ; Filament 80mm langsam zurückziehen
+  
+  M155 S3  ; reset temperature reporting
+  M104 S0 ; cooling down the Hotend
+
+[gcode_macro Bed_Mesh_60]
+gcode:
+  G28 ;Alle Achsen Homen
+  Heat_Bed_60
+  M190 S60
+  BED_MESH_CALIBRATE
+  BED_MESH_PROFILE SAVE=mesh_60
+  M140 S0
+
+[gcode_macro Bed_Mesh_80]
+gcode:
+  G28 ;Alle Achsen Homen
+  Heat_Bed_80
+  M190 S80
+  BED_MESH_CALIBRATE
+  BED_MESH_PROFILE SAVE=mesh_80
+  M140 S0
+
+[gcode_macro update_git]
+gcode:
+    RUN_SHELL_COMMAND CMD=update_git_script
+
+#[gcode_shell_command update_git_script]
+#command: bash /home/pi/klipper-backup/script.sh
+#timeout: 90.0
+#verbose: True
+
+#[gcode_macro _TIMELAPSE_NEW_FRAME]
+#gcode:
+# {action_call_remote_method("timelapse_newframe")}
+# ; leave this in a separate macro!
+
+#[gcode_macro TIMELAPSE_TAKE_FRAME]
+#gcode:
+#  G10
+#  SAVE_GCODE_STATE NAME=SNAPSHOT
+#  G1 X175.0 F10000
+#  G1 Y100.0 F10000
+#  G4 P500 ;dwell
+#  M400    ;clear buffer
+#  _TIMELAPSE_NEW_FRAME
+#  G4 P250 ;moar dwelling
+#  M400
+#  RESTORE_GCODE_STATE NAME=SNAPSHOT MOVE=1
+#  G11
+  
+
+#[gcode_macro TIMELAPSE_RENDER]
+#gcode:
+#  {action_call_remote_method("timelapse_render")}
+
+#[gcode_macro TOGGLE_LEDLIGHTS]
+#gcode:
+#  SET_PIN PIN=LEDlights VALUE={(not printer['output_pin LEDlights'].value)|int}
+
+############################################################
+# START_PRINT T_EXTRUDER = 0 T_BED = 0
+############################################################
+[gcode_macro START_PRINT]
+gcode:
+  #Definieren von Parameter für Slicer
+  {% set t_extruder = params.T_EXTRUDER|default(0)|float%}
+  {% set t_bed = params.T_BED|default(0)|float%}
+
+  #Alle Achsen auf 0
+  #SET_HEATER_TEMPERATURE HEATER=extruder TARGET={t_extruder}
+  #SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={t_bed}
+  M104 S{t_extruder}            ; Setzen von Hotend Temperatur
+  M140 S{t_bed}                 ; Setzen von Bed Temperatur
+
+  G92 E0
+  
+  G28 X0 Y0                     ; X/Y auf 0 Setzten auf Endstop
+  G28 Z0                        ; Z auf 0 Setzen auf Endstop
+  M83                           ; Extruder relative Position
+
+  G1 X112.5 Y110 F2000          ; Hotend in die Mitte des Bettes bewegen
+  G92 E0.0                      ; Extruder zurücksetzen
+
+  G90                           ; Absolute Position
+
+  ### Mesh Laden
+  BED_MESH_PROFILE LOAD=default
+
+  #TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={t_extruder}
+  #TEMPERATURE_WAIT SENSOR=heater_bed MAXIMUM={t_bed}
+  M190 S{t_bed}                 ; Warten auf Bed Temperatur
+  M109 S{t_extruder}            ; Warten auf Hotend Temperatur
+
+  ### Purge Line
+  #_PURGE_LINE
+
+[gcode_macro _PURGE_LINE]
+gcode:
+  G90
+  G1 X5 Y5 F2000
+  G0 Z0.3
+  G92 E0
+  G1 X5 Y55 E25 F500
+  G1 E-0.8 F2000
+  G92 E0
+  G0 Z5.0 F2000
+
+[gcode_macro END_PRINT]
+gcode:
+  TURN_OFF_HEATERS
+  G91                           ; Extruder relative Position
+
+  G1 E-1 F3000                  ; Zurückziehen von Filament
+  G1 X-0.5 Y-0.5 Z5 E-5         ; Wegfahren von Druckobjekt und Zurückziehen des Filaments
+
+  G90                           ; Absolute Position
+
+  G1 X112.5 Y220                ; Bewegen des Druckkopfes nach Hinten mitte
+
+  M107                          ; Teilelüfter ausschalten
+  M117 Druck fertig             ; Ausgabe von Nachricht in Konsole
+
+############################################################################
+##                                                                        ##
+##                               Macros                                   ##
+##                                                                        ##
+############################################################################
 
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
 #*#
-#*# [heater_bed]
-#*# pid_kp = 71.881
-#*# pid_ki = 1.409
-#*# pid_kd = 916.483
-#*# control = pid
-#*#
-#*# [input_shaper]
-#*# shaper_type_x = 3hump_ei
-#*# shaper_type_y = 3hump_ei
+#*# [bltouch]
+#*# z_offset = 1.649
 #*#
 #*# [extruder]
-#*# pid_kp = 16.513
-#*# pid_ki = 0.532
-#*# pid_kd = 128.178
 #*# control = pid
+#*# pid_kp = 16.468
+#*# pid_ki = 0.533
+#*# pid_kd = 127.216
 #*#
-#*# [bltouch]
-#*# z_offset = 1.700
+#*# [heater_bed]
+#*# control = pid
+#*# pid_kp = 70.936
+#*# pid_ki = 1.551
+#*# pid_kd = 811.328
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.355000, 0.245000, 0.137500, 0.028750, -0.026250, -0.087500, -0.253750, -0.367500, -0.510000
-#*# 	  0.482500, 0.347500, 0.152500, 0.066250, -0.025000, -0.066250, -0.228750, -0.387500, -0.482500
-#*# 	  0.528750, 0.438750, 0.257500, 0.130000, 0.101250, -0.015000, -0.215000, -0.331250, -0.457500
-#*# 	  0.476250, 0.465000, 0.262500, 0.152500, 0.135000, -0.017500, -0.206250, -0.288750, -0.431250
-#*# 	  0.501250, 0.472500, 0.343750, 0.172500, 0.033750, -0.076250, -0.192500, -0.223750, -0.347500
-#*# 	  0.478750, 0.460000, 0.318750, 0.135000, 0.023750, -0.003750, -0.225000, -0.326250, -0.370000
-#*# 	  0.468750, 0.420000, 0.268750, 0.118750, 0.005000, -0.095000, -0.146250, -0.271250, -0.405000
-#*# 	  0.506250, 0.276250, 0.170000, 0.090000, 0.018750, -0.138750, -0.287500, -0.407500, -0.456250
-#*# 	  0.432500, 0.343750, 0.137500, 0.018750, 0.011250, -0.132500, -0.337500, -0.448750, -0.531250
+#*# 	  0.148500, 0.183500, 0.106000, 0.093500, 0.111000, 0.172250, 0.067250, -0.019000, -0.035250
+#*# 	  0.304750, 0.293500, 0.168500, 0.148500, 0.128500, 0.194750, 0.138500, 0.011000, -0.006500
+#*# 	  0.351000, 0.346000, 0.333500, 0.257250, 0.193500, 0.132250, 0.099750, 0.168500, 0.076000
+#*# 	  0.303500, 0.271000, 0.311000, 0.223500, 0.209750, 0.243500, 0.117250, 0.062250, 0.107250
+#*# 	  0.309750, 0.347250, 0.302250, 0.221000, 0.197250, 0.267250, 0.207250, 0.106000, 0.031000
+#*# 	  0.308500, 0.346000, 0.331000, 0.283500, 0.178500, 0.144750, 0.173500, 0.054750, 0.022250
+#*# 	  0.278500, 0.364750, 0.311000, 0.271000, 0.162250, 0.117250, 0.108500, 0.172250, 0.008500
+#*# 	  0.303500, 0.309750, 0.219750, 0.161000, 0.144750, 0.189750, 0.048500, 0.127250, -0.029000
+#*# 	  0.224750, 0.221000, 0.184750, 0.114750, 0.062250, 0.068500, 0.096000, 0.039750, 0.011000
 #*# x_count = 9
 #*# y_count = 9
 #*# mesh_x_pps = 2
