--- a/printer.cfg
+++ b/printer.cfg
@@ -1,3 +1,4 @@
+[include fluidd.cfg]
 # This file contains pin mappings for the Anycubic i3 Mega with
 # Ultrabase from 2017. (This config may work on an Anycubic i3 Mega v1
 # prior to the Ultrabase if you comment out the definition of the
@@ -5,14 +6,18 @@
 # firmware should be compiled for the AVR atmega2560.
 
 # See docs/Config_Reference.md for a description of parameters.
-
-#[include base.cfg]
-#[include extruder.cfg]
-#[include bltouch.cfg]
-#[include macros.cfg]
-#[include start_end.cfg]
 [include mainsail.cfg]
 
+##############################################
+# Eigene Includes
+##############################################
+[include includes/macros.cfg]
+[include includes/start_stop.cfg]
+[include includes/bltouch.cfg]
+
+##############################################
+# Für Exclude Objects Plugin
+##############################################
 [exclude_object]
 
 [stepper_x]
@@ -64,7 +69,8 @@ step_pin: PA4
 dir_pin: PA6
 enable_pin: !PA2
 microsteps: 16
-rotation_distance: 34.557
+#rotation_distance: 34.557 ;Original Wert 10mm zuwenig Extrudiert
+rotation_distance: 28.65984795
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PB4
@@ -76,7 +82,7 @@ sensor_pin: PK5
 #pid_Kd: 108.451
 min_temp: 0
 max_temp: 260 ;245 Origianl Wert. Wurde auf 260 angepasst laut Anycubic Doku (https://drive.google.com/file/d/13hGH6_5x4iELyqkURTVaChUewx2xc3V2/view) Seite 5
-max_extrude_only_distance: 2
+max_extrude_only_distance: 150.0
 
 [heater_fan extruder_fan]
 pin: PL5
@@ -112,236 +118,8 @@ pin: PH4
 [virtual_sdcard]
 path: ~/printer_data/gcodes
 
-[bltouch]
-sensor_pin = ^PD0 #PIN21 in Marlin
-control_pin = PB5 #PIN11 in Marlin
-samples: 2
-sample_retract_dist: 3.0
-probe_with_touch_mode = True
-stow_on_each_sample = False
-x_offset = 27
-y_offset = -14
-#z_offset = 0
-
-#Turn ON to adjust home location from 0,0,0
-[safe_z_home]
-home_xy_position = 112.5,105
-speed = 50
-z_hop = 10
-z_hop_speed = 5
-
-# bltouch mesh bed leveling
-[bed_mesh]
-speed = 100
-horizontal_move_z = 5
-mesh_min = 30,5 #23,28
-mesh_max = 200,190 #190,190
-probe_count = 9,9
-algorithm = bicubic
-
-[display_status]
-
-############################################################################
-##                                                                        ##
-##                               Macros                                   ##
-##                                                                        ##
-############################################################################
-[gcode_macro M300]
-# default_parameter_S: 1000
-# default_parameter_P: 100
-gcode:
-    {% set S = params.S|default(1000)|float %}
-    {% set P = params.P|default(100)|float %}
-    SET_PIN PIN=BEEPER_pin VALUE=1000
-    G4 P100
-    SET_PIN PIN=BEEPER_pin VALUE=0
-
-[gcode_macro M600]
-# default_parameter_X: 50
-# default_parameter_Y: 0
-# default_parameter_Z: 10
-gcode:
-    {% set X = params.X|default(50)|float %}
-    {% set Y = params.Y|default(0)|float %}
-    {% set Z = params.Z|default(10)|float %}
-    SAVE_GCODE_STATE NAME=M600_state
-    PAUSE
-    G91
-    G1 E-.8 F2700
-    G1 Z{Z}
-    G90
-    G1 X{X} Y{Y} F3000
-    G91
-    G1 E-150 F1000
-    M300 S299 P200
-    M300 S299 P200
-    M300 S299 P200
-    M300 S299 P200
-    M300 S299 P200
-    RESTORE_GCODE_STATE NAME=M600_state
-
-[gcode_macro Heat_Hotend_200]
-gcode:
-  SET_HEATER_TEMPERATURE HEATER=extruder TARGET=200
-
-[gcode_macro Heat_Hotend_230]
-gcode:
-  SET_HEATER_TEMPERATURE HEATER=extruder TARGET=230
-
-[gcode_macro Heat_Bed_60]
-gcode:
-  SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=60
-
-[gcode_macro Filemant_Remove]
-gcode:
-  G28 ; Alle Achsen Homen
-  M104 S230 ; Einstellen der Temperatur für das Hotend.
-
-  M300 S1000 P500 ; chirp to indicate bed mesh levels is initializing
-
-  ;G1 Z100 F2400 ; Bewegen des Hotend auf 100mm höhe.
-  ;G1 X105 F1200 ; Bewegen des Hotend auf Mitte von Bauvolumen.
-  ;G1 Y200 F1200 ; Druckbett um 200mm nach vorne bewegen.
-  
-  M109 S230 ; Warten bis Hotend Temperatur zum Filamentwechsel Erreicht hat.
-  
-  M300 S440 P200 ; Ton ausgeben wenn Temperatur erreicht
-  
-  G1 E-50 F7200 ; Filament 30mm schnell zurückziehen
-  G1 E-80 F80 ; Filament 80mm langsam zurückziehen
-  
-  M155 S3  ; reset temperature reporting
-  M104 S0 ; cooling down the Hotend
-
-[gcode_macro Bed_Mesh_60]
-gcode:
-  G28 ;Alle Achsen Homen
-  Heat_Bed_60
-  M190 S60
-  BED_MESH_CALIBRATE
-  BED_MESH_PROFILE SAVE=mesh_60
-  M140 S0
-
-[gcode_macro Bed_Mesh_80]
-gcode:
-  G28 ;Alle Achsen Homen
-  Heat_Bed_80
-  M190 S80
-  BED_MESH_CALIBRATE
-  BED_MESH_PROFILE SAVE=mesh_80
-  M140 S0
-
-[gcode_macro update_git]
-gcode:
-    RUN_SHELL_COMMAND CMD=update_git_script
-
-#[gcode_shell_command update_git_script]
-#command: bash /home/pi/klipper-backup/script.sh
-#timeout: 90.0
-#verbose: True
-
-#[gcode_macro _TIMELAPSE_NEW_FRAME]
-#gcode:
-# {action_call_remote_method("timelapse_newframe")}
-# ; leave this in a separate macro!
-
-#[gcode_macro TIMELAPSE_TAKE_FRAME]
-#gcode:
-#  G10
-#  SAVE_GCODE_STATE NAME=SNAPSHOT
-#  G1 X175.0 F10000
-#  G1 Y100.0 F10000
-#  G4 P500 ;dwell
-#  M400    ;clear buffer
-#  _TIMELAPSE_NEW_FRAME
-#  G4 P250 ;moar dwelling
-#  M400
-#  RESTORE_GCODE_STATE NAME=SNAPSHOT MOVE=1
-#  G11
-  
-
-#[gcode_macro TIMELAPSE_RENDER]
-#gcode:
-#  {action_call_remote_method("timelapse_render")}
-
-#[gcode_macro TOGGLE_LEDLIGHTS]
-#gcode:
-#  SET_PIN PIN=LEDlights VALUE={(not printer['output_pin LEDlights'].value)|int}
-
-############################################################
-# START_PRINT T_EXTRUDER = 0 T_BED = 0
-############################################################
-[gcode_macro START_PRINT]
-gcode:
-  #Definieren von Parameter für Slicer
-  {% set t_extruder = params.T_EXTRUDER|default(0)|float%}
-  {% set t_bed = params.T_BED|default(0)|float%}
-
-  #Alle Achsen auf 0
-  #SET_HEATER_TEMPERATURE HEATER=extruder TARGET={t_extruder}
-  #SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={t_bed}
-  M104 S{t_extruder}            ; Setzen von Hotend Temperatur
-  M140 S{t_bed}                 ; Setzen von Bed Temperatur
-
-  G92 E0
-  
-  G28 X0 Y0                     ; X/Y auf 0 Setzten auf Endstop
-  G28 Z0                        ; Z auf 0 Setzen auf Endstop
-  M83                           ; Extruder relative Position
-
-  G1 X112.5 Y110 F2000          ; Hotend in die Mitte des Bettes bewegen
-  G92 E0.0                      ; Extruder zurücksetzen
-
-  G90                           ; Absolute Position
-
-  ### Mesh Laden
-  BED_MESH_PROFILE LOAD=default
-
-  #TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={t_extruder}
-  #TEMPERATURE_WAIT SENSOR=heater_bed MAXIMUM={t_bed}
-  M190 S{t_bed}                 ; Warten auf Bed Temperatur
-  M109 S{t_extruder}            ; Warten auf Hotend Temperatur
-
-  ### Purge Line
-  #_PURGE_LINE
-
-[gcode_macro _PURGE_LINE]
-gcode:
-  G90
-  G1 X5 Y5 F2000
-  G0 Z0.3
-  G92 E0
-  G1 X5 Y55 E25 F500
-  G1 E-0.8 F2000
-  G92 E0
-  G0 Z5.0 F2000
-
-[gcode_macro END_PRINT]
-gcode:
-  TURN_OFF_HEATERS
-  G91                           ; Extruder relative Position
-
-  G1 E-1 F3000                  ; Zurückziehen von Filament
-  G1 X-0.5 Y-0.5 Z5 E-5         ; Wegfahren von Druckobjekt und Zurückziehen des Filaments
-
-  G90                           ; Absolute Position
-
-  G1 X112.5 Y220                ; Bewegen des Druckkopfes nach Hinten mitte
-
-  M107                          ; Teilelüfter ausschalten
-  M117 Druck fertig             ; Ausgabe von Nachricht in Konsole
-
-############################################################################
-##                                                                        ##
-##                               Macros                                   ##
-##                                                                        ##
-############################################################################
-
 #*# <---------------------- SAVE_CONFIG ---------------------->
 #*# DO NOT EDIT THIS BLOCK OR BELOW. The contents are auto-generated.
-#*#
-#*# [bltouch]
-#*# z_offset = 1.649
 #*#
 #*# [extruder]
 #*# control = pid
@@ -355,18 +133,21 @@ gcode:
 #*# pid_ki = 1.551
 #*# pid_kd = 811.328
 #*#
+#*# [bltouch]
+#*# z_offset = 1.049
+#*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.148500, 0.183500, 0.106000, 0.093500, 0.111000, 0.172250, 0.067250, -0.019000, -0.035250
-#*# 	  0.304750, 0.293500, 0.168500, 0.148500, 0.128500, 0.194750, 0.138500, 0.011000, -0.006500
-#*# 	  0.351000, 0.346000, 0.333500, 0.257250, 0.193500, 0.132250, 0.099750, 0.168500, 0.076000
-#*# 	  0.303500, 0.271000, 0.311000, 0.223500, 0.209750, 0.243500, 0.117250, 0.062250, 0.107250
-#*# 	  0.309750, 0.347250, 0.302250, 0.221000, 0.197250, 0.267250, 0.207250, 0.106000, 0.031000
-#*# 	  0.308500, 0.346000, 0.331000, 0.283500, 0.178500, 0.144750, 0.173500, 0.054750, 0.022250
-#*# 	  0.278500, 0.364750, 0.311000, 0.271000, 0.162250, 0.117250, 0.108500, 0.172250, 0.008500
-#*# 	  0.303500, 0.309750, 0.219750, 0.161000, 0.144750, 0.189750, 0.048500, 0.127250, -0.029000
-#*# 	  0.224750, 0.221000, 0.184750, 0.114750, 0.062250, 0.068500, 0.096000, 0.039750, 0.011000
+#*# 	  0.692250, 0.716000, 0.633500, 0.609750, 0.664750, 0.713500, 0.656000, 0.666000, 0.554750
+#*# 	  0.761000, 0.706000, 0.771000, 0.819750, 0.734750, 0.731000, 0.827250, 0.736000, 0.651000
+#*# 	  0.828500, 0.837250, 0.792250, 0.817250, 0.871000, 0.979750, 0.903500, 0.807250, 0.731000
+#*# 	  0.852250, 0.941000, 0.847250, 0.897250, 0.908500, 1.001000, 0.959750, 0.872250, 0.784750
+#*# 	  0.842250, 0.911000, 0.918500, 0.932250, 0.963500, 1.056000, 1.002250, 0.912250, 0.834750
+#*# 	  0.746000, 0.817250, 0.909750, 0.876000, 0.914750, 0.999750, 0.914750, 0.843500, 0.812250
+#*# 	  0.666000, 0.826000, 0.834750, 0.829750, 0.888500, 1.007250, 0.952250, 0.917250, 0.793500
+#*# 	  0.607250, 0.754750, 0.831000, 0.803500, 0.804750, 0.963500, 0.879750, 0.788500, 0.796000
+#*# 	  0.516000, 0.644750, 0.661000, 0.731000, 0.682250, 0.733500, 0.866000, 0.793500, 0.723500
 #*# x_count = 9
 #*# y_count = 9
 #*# mesh_x_pps = 2
@@ -375,5 +156,5 @@ gcode:
 #*# tension = 0.2
 #*# min_x = 30.0
 #*# max_x = 200.0
-#*# min_y = 5.0
+#*# min_y = 5.000000000000002
 #*# max_y = 189.96
