--- a/KlipperScreen.conf
+++ b/KlipperScreen.conf
@@ -2,5 +2,21 @@
 #~# --- Do not edit below this line. This section is auto generated --- #~#
 #~#
 #~# [main]
+#~# use_dpms = False
 #~# print_sort_dir = date_desc
+#~# 
+#~# [displayed_macros Printer]
+#~# cancel_print = False
+#~# clear_active_spool = False
+#~# end_print = False
+#~# m300 = False
+#~# m600 = False
+#~# set_active_spool = False
+#~# start_print = False
+#~# update_git = False
+#~# pause = False
+#~# resume = False
+#~# set_pause_at_layer = False
+#~# set_print_stats_info = False
+#~# set_pause_next_layer = False
 #~#
