--- a/includes/macros.cfg
+++ b/includes/macros.cfg
@@ -3,6 +3,14 @@
 ##                               Macros                                   ##
 ##                                                                        ##
 ############################################################################
+[output_pin BEEPER_pin]
+pin: PC6
+pwm: True
+value: 0
+shutdown_value: 0
+cycle_time: 0.001
+scale: 1000
+
 [gcode_macro M300]
 # default_parameter_S: 1000
 # default_parameter_P: 100
@@ -71,6 +79,7 @@ gcode:
     {% endfor %}
 
     M84                                                     ; Motoren ausschalten
+    G90
     TURN_OFF_HEATERS                                        ; Alles Runterkühlen
 
 
@@ -95,23 +104,6 @@ gcode:
   #M155 S3  ; reset temperature reporting
   M104 S0 ; cooling down the Hotend
 
-#[gcode_macro Bed_Mesh_60]
-#gcode:
-#  G28 ;Alle Achsen Homen
-#  Heat_Bed_60
-#  M190 S60
-#  BED_MESH_CALIBRATE
-#  BED_MESH_PROFILE SAVE=mesh_60
-#  M140 S0
-#
-#[gcode_macro Bed_Mesh_80]
-#gcode:
-#  G28 ;Alle Achsen Homen
-#  Heat_Bed_80
-#  M190 S80
-#  BED_MESH_CALIBRATE
-#  BED_MESH_PROFILE SAVE=mesh_80
-#  M140 S0
 
 #[gcode_macro update_git]
 #gcode:
@@ -180,30 +172,32 @@ command: bash /home/pi/klipper-backup/script.sh
 timeout: 90.0
 verbose: True
 
-#[gcode_macro _TIMELAPSE_NEW_FRAME]
-#gcode:
-# {action_call_remote_method("timelapse_newframe")}
-# ; leave this in a separate macro!
-
-#[gcode_macro TIMELAPSE_TAKE_FRAME]
-#gcode:
-#  G10
-#  SAVE_GCODE_STATE NAME=SNAPSHOT
-#  G1 X175.0 F10000
-#  G1 Y100.0 F10000
-#  G4 P500 ;dwell
-#  M400    ;clear buffer
-#  _TIMELAPSE_NEW_FRAME
-#  G4 P250 ;moar dwelling
-#  M400
-#  RESTORE_GCODE_STATE NAME=SNAPSHOT MOVE=1
-#  G11
-  
-
-#[gcode_macro TIMELAPSE_RENDER]
-#gcode:
-#  {action_call_remote_method("timelapse_render")}
-
-#[gcode_macro TOGGLE_LEDLIGHTS]
-#gcode:
-#  SET_PIN PIN=LEDlights VALUE={(not printer['output_pin LEDlights'].value)|int}
+###################################################################
+# Klipperscreen Macros
+###################################################################
+[gcode_macro LOAD_FILAMENT]
+gcode:
+    {% set speed = params.SPEED|default(300) %}
+    {% set max_velocity = printer.configfile.settings['extruder'].max_extrude_only_velocity %}
+    SAVE_GCODE_STATE NAME=load_state
+    M300 # beep
+    G91
+    G92 E0
+    G1 E350 F{max_velocity} # fast-load
+    G1 E25 F{speed} # purge
+    M300
+    M300
+    RESTORE_GCODE_STATE NAME=load_state
+[gcode_macro UNLOAD_FILAMENT]
+gcode:
+    {% set speed = params.SPEED|default(300) %}
+    {% set max_velocity = printer.configfile.settings['extruder'].max_extrude_only_velocity %}
+    SAVE_GCODE_STATE NAME=unload_state
+    G91
+    M300 # beep
+    G92 E0
+    G1 E25 F{speed} # purge
+    G1 E-420 F{max_velocity} # fast-unload
+    M300
+    M300
+    RESTORE_GCODE_STATE NAME=unload_state
