--- a/moonraker.conf
+++ b/moonraker.conf
@@ -84,21 +84,21 @@ channel: stable
 repo: fluidd-core/fluidd
 path: ~/fluidd
 
-[update_manager KlipperScreen]
-type: git_repo
-path: ~/KlipperScreen
-origin: https://github.com/KlipperScreen/KlipperScreen.git
-virtualenv: ~/.KlipperScreen-env/bin/python
-requirements: scripts/KlipperScreen-requirements.txt
-system_dependencies: scripts/system-dependencies.json
-managed_services: KlipperScreen
+#[update_manager KlipperScreen]
+#type: git_repo
+#path: ~/KlipperScreen
+#origin: https://github.com/KlipperScreen/KlipperScreen.git
+#virtualenv: ~/.KlipperScreen-env/bin/python
+#requirements: scripts/KlipperScreen-requirements.txt
+#system_dependencies: scripts/system-dependencies.json
+#managed_services: KlipperScreen
 
 ###################################################################
 # TPLink Steckdose einbinden
 ###################################################################
 [power anycubic_i3_mega_plug]
 type: tplink_smartplug
-address: 192.168.178.58
+address: 192.168.178.75
 restart_klipper_when_powered: true
 restart_delay: 2.0
 
