--- a/includes/macros.cfg
+++ b/includes/macros.cfg
@@ -45,17 +45,21 @@ gcode:
     M300 S299 P200
     RESTORE_GCODE_STATE NAME=M600_state
 
-#[gcode_macro Heat_Hotend_200]
-#gcode:
-#  SET_HEATER_TEMPERATURE HEATER=extruder TARGET=200
-#
-#[gcode_macro Heat_Hotend_230]
-#gcode:
-#  SET_HEATER_TEMPERATURE HEATER=extruder TARGET=230
-#
-#[gcode_macro Heat_Bed_60]
-#gcode:
-#  SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET=60
+[gcode_macro G29]
+gcode:
+  G28
+  BED_MESH_CALIBRATE
+
+[gcode_macro BED_CALBRATE]
+gcode:
+  G28
+  G90
+
+  G1 X83.500 Y120 Z10 F1000
+
+  G91
+
+  G29
 
 [gcode_macro Filament_Insert]
 gcode:
