--- a/includes/start_stop.cfg
+++ b/includes/start_stop.cfg
@@ -12,7 +12,7 @@ gcode:
   #SET_HEATER_TEMPERATURE HEATER=heater_bed TARGET={t_bed}
   M104 S{t_extruder}            ; Setzen von Hotend Temperatur
   M140 S{t_bed}                 ; Setzen von Bed Temperatur
-  M221 S200                     ; Setzen vom Flow
+  M221 S175                     ; Setzen vom Flow
 
   G92 E0                        ; Extruder zurücksetzen
   
@@ -26,7 +26,7 @@ gcode:
   G90                           ; Absolute Position
 
   ### Mesh Laden
-  #BED_MESH_PROFILE LOAD=default
+  BED_MESH_PROFILE LOAD=default
 
   #TEMPERATURE_WAIT SENSOR=extruder MAXIMUM={t_extruder}
   #TEMPERATURE_WAIT SENSOR=heater_bed MAXIMUM={t_bed}
