--- a/moonraker.conf
+++ b/moonraker.conf
@@ -99,8 +99,8 @@ path: ~/fluidd
 [power anycubic_i3_mega_plug]
 type: tplink_smartplug
 address: 192.168.178.75
-restart_klipper_when_powered: true
-restart_delay: 2.0
+#restart_klipper_when_powered: true
+#restart_delay: 2.0
 
 ##################################################################
 # Einbinden von Spoolman
