--- a/printer.cfg
+++ b/printer.cfg
@@ -160,11 +160,11 @@ enable_pin: !PK0
 microsteps: 16
 rotation_distance: 8
 position_max: 210                               ;Anpassung Druckbett auf Knuttwurst einstellungen
-homing_speed: 5.0
+homing_speed: 10.0
 #Anpassung damit BL-Toch als Virtueller Endstop genutzt wurd
 #endstop_pin: probe:z_virtual_endstop
 endstop_pin: ^!PD3                             ;Wurde auskommentiert, da dies laut Doku (https://www.klipper3d.org/BLTouch.html#:~:text=If%20the%20BL%2DTouch%20will%20be%20used%20to%20home%20the%20Z%20axis%20then%20set%20endstop_pin%3A) nicht benötigt wird bei BLTouchhttps://www.klipper3d.org/BLTouch.html#:~:text=If%20the%20BL%2DTouch%20will%20be%20used%20to%20home%20the%20Z%20axis%20then%20set%20endstop_pin%3A
-position_endstop: 0.0                          ;Wurde auskommentiert, da dies laut Doku (https://www.klipper3d.org/BLTouch.html#:~:text=If%20the%20BL%2DTouch%20will%20be%20used%20to%20home%20the%20Z%20axis%20then%20set%20endstop_pin%3A) nicht benötigt wird bei BLTouchhttps://www.klipper3d.org/BLTouch.html#:~:text=If%20the%20BL%2DTouch%20will%20be%20used%20to%20home%20the%20Z%20axis%20then%20set%20endstop_pin%3A
+#position_endstop: 0.0                          ;Wurde auskommentiert, da dies laut Doku (https://www.klipper3d.org/BLTouch.html#:~:text=If%20the%20BL%2DTouch%20will%20be%20used%20to%20home%20the%20Z%20axis%20then%20set%20endstop_pin%3A) nicht benötigt wird bei BLTouchhttps://www.klipper3d.org/BLTouch.html#:~:text=If%20the%20BL%2DTouch%20will%20be%20used%20to%20home%20the%20Z%20axis%20then%20set%20endstop_pin%3A
 
 [stepper_z1]
 step_pin: PC1
@@ -174,13 +174,35 @@ microsteps: 16
 rotation_distance: 8
 endstop_pin: ^!PL6
 
+[bltouch]
+sensor_pin = ^PD0 #PIN21 in Marlin
+control_pin = PB5 #PIN11 in Marlin
+samples: 2
+sample_retract_dist: 3.0
+probe_with_touch_mode: True
+stow_on_each_sample = False
+#############################################################
+# Offset für BLTouch vom Anycubic i3 Mega X-Carriage [MK4]
+# https://www.thingiverse.com/thing:3537449
+#############################################################
+x_offset = 29
+y_offset = -15
+#z_offset = 1.700
+
+#Turn ON to adjust home location from 0,0,0
+[safe_z_home]
+home_xy_position = 112.5,105
+speed = 60
+z_hop = 10
+z_hop_speed = 10
+
 [extruder]
 step_pin: PA4
 dir_pin: PA6
 enable_pin: !PA2
 microsteps: 16
 #rotation_distance: 34.557 ;Original Wert 10mm zuwenig Extrudiert
-rotation_distance: 28.65984795
+rotation_distance: 34.557
 nozzle_diameter: 0.400
 filament_diameter: 1.750
 heater_pin: PB4
@@ -252,27 +274,26 @@ path: ~/printer_data/gcodes
 #*# pid_kd = 811.328
 #*#
 #*# [bltouch]
-#*# z_offset = 1.049
+#*# z_offset = 1.679
 #*#
 #*# [bed_mesh default]
 #*# version = 1
 #*# points =
-#*# 	  0.699750, 0.713500, 0.701000, 0.608500, 0.681000, 0.644750, 0.641000, 0.611000, 0.709750
-#*# 	  0.786000, 0.752250, 0.721000, 0.762250, 0.791000, 0.729750, 0.732250, 0.732250, 0.797250
-#*# 	  0.873500, 0.927250, 0.914750, 0.891000, 0.867250, 0.871000, 0.862250, 0.869750, 0.936000
-#*# 	  0.821000, 0.883500, 0.943500, 1.003500, 0.951000, 0.949750, 0.937250, 0.971000, 1.006000
-#*# 	  0.836000, 0.993500, 1.019750, 1.039750, 1.051000, 0.972250, 0.988500, 1.047250, 0.973500
-#*# 	  0.849750, 0.962250, 0.974750, 0.968500, 0.977250, 1.027250, 1.042250, 0.923500, 0.967250
-#*# 	  0.796000, 0.811000, 0.876000, 1.007250, 1.011000, 1.006000, 0.951000, 1.006000, 0.941000
-#*# 	  0.698500, 0.818500, 0.797250, 0.877250, 0.933500, 0.913500, 0.881000, 0.867250, 0.872250
-#*# 	  0.609750, 0.733500, 0.784750, 0.804750, 0.771000, 0.786000, 0.784750, 0.849750, 0.807250
-#*# x_count = 9
-#*# y_count = 9
+#*# 	0.071000, 0.064750, 0.026000, 0.121000, 0.117250
+#*# 	0.178500, 0.163500, 0.241000, 0.208500, 0.239750
+#*# 	0.216000, 0.244750, 0.267250, 0.402250, 0.294750
+#*# 	0.161000, 0.321000, 0.231000, 0.331000, 0.267250
+#*# 	0.082250, 0.148500, 0.228500, 0.147250, 0.271000
+#*# x_count = 5
+#*# y_count = 5
 #*# mesh_x_pps = 2
 #*# mesh_y_pps = 2
 #*# algo = bicubic
 #*# tension = 0.2
 #*# min_x = 30.0
 #*# max_x = 200.0
-#*# min_y = 5.000000000000002
-#*# max_y = 189.96
+#*# min_y = 5.0
+#*# max_y = 190.0
+#*#
+#*# [stepper_z]
+#*# position_endstop = 0.330
